--- a/static/style.css
+++ b/static/style.css
@@ -11,36 +11,55 @@ body {
     height: 100vh;
 }
 #mapbox {
-    height: 100vh;
-    width: 100vw;
-}
-#dev-info {
-    z-index: 1000; 
-    position: absolute; 
-    top: 20px; 
-    left: 20px; 
-    padding: 10px;
-    background-color: rgba(0,0,0,0.1);
+    height: 100%;
+    width: 100%;
 }
 
-.loader {
-    margin: -10px 0 0 -250px;
-    height: 100px;
+#loader {
     width: 20%;
     position: fixed;
     text-align: center;
     padding: 1em;
-    top: 50%;
-    left: 50%;
-    margin: 0 auto 1em;
     z-index: 9999;
 }
-
 /*
-Set the color of the icon
+Set the color of the loader
 */
-
 svg path,
 svg rect {
-    fill: #FF6700;
+    fill: #000000;
+}
+
+.overlay {
+    z-index: 1000; 
+    background-color: rgba(0,0,0,0.5);
+    color: #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+    border-radius: 3px;
+}
+
+#dev-info {
+    position: fixed; 
+    top: 20px; 
+    right: 20px; 
+    padding: 10px;
+}
+
+#info-overlay {
+    position: fixed;
+    display:flex;
+    width: 30%;
+    max-width: 730px;
+    max-height: 75%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+    top: 20px; 
+    left: 20px; 
+    padding: 10px;
+    margin-left: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    margin-right: 5px;
+
 }
