--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,8 @@
 body {
+    margin: 0;
     overflow: hidden;
     height: 100vh;
+    font-family: 'Open Sans', sans-serif;
 }
 .centered {
     display: flex;
@@ -25,16 +27,16 @@ body {
 /*
 Set the color of the loader
 */
-svg path,
-svg rect {
+#loader svg path,
+#loader svg rect {
     fill: #000000;
 }
 
 .overlay {
     z-index: 1000; 
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.65);
     color: #fff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.10);
     border-radius: 3px;
 }
 
@@ -48,18 +50,27 @@ svg rect {
 #info-overlay {
     position: fixed;
     display:flex;
-    width: 30%;
+    flex-direction: column;
+    width: auto;
     max-width: 730px;
-    max-height: 75%;
+    max-height: 95%;
     overflow-y: auto;
     overflow-x: hidden;
     overflow-wrap: break-word;
-    top: 20px; 
-    left: 20px; 
+    top: 15px; 
+    left: 15px; 
     padding: 10px;
     margin-left: 5px;
     margin-top: 2px;
     margin-bottom: 2px;
     margin-right: 5px;
+}
 
+.select {
+    margin-bottom: 10px;
+}
+
+#lot-info {
+    display: flex;
+    flex-direction: column;
 }
