--- a/templates/index.html
+++ b/templates/index.html
@@ -7,25 +7,35 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.0-beta.1/mapbox-gl.css' rel='stylesheet' />
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="centered">
         <div id="mapbox"></div>
-        <!-- <div id="dev-info" class="overlay">
+        <div id="dev-info" class="overlay">
             <div id="zoom_indicator"></div>
-            <div id="bounds_indicator"></div>
-        </div> -->
-        <div id='info-overlay' class="overlay" style="display: flex;">
-            <div id="#lot-info">
-                <div>Eval unit: 10043296654429300000000</div>
-                <div>Address: 467 rue Godbout</div>
-                <div>Const. yr 1973</div>
-                <div>Phys Link: single-detached</div>
-                <div>Num Dwelling: 12</div>
+            <!-- <div id="bounds_indicator"></div> -->
+        </div>
+        <div id='info-overlay' class="overlay" style="display: none;">
+            <!-- <div class="select">
+                <div>Map Type</div>
+                <div id="map-type-select">
+                    <input id="light-v11" type="radio" name="map-type-select" value="light" checked="checked">
+                    <label for="light-v11">light</label>
+                    <input id="satellite-streets-v12" type="radio" name="map-type-select" value="satellite">
+                    <label for="satellite-streets-v12">satellite</label>
+                </div>
             </div>
-            <div id="hlm-info">
-
-            </div>
+            <div class="select">
+                <div>Layer Select</div>
+                <div id="data-layer-select">
+                    <input id="hlms" type="radio" name="data-select" value="hlms" checked="checked">
+                    <label for="hlms">HLMs</label>
+                    <input id="murbs" type="radio" name="data-select" value="murbs">
+                    <label for="murbs">MURBs</label>
+                </div>
+            </div> -->
         </div>
         <object id="loader" data="{{ url_for('static', filename='svg/loader.svg') }}" type="image/svg+xml" 
             width="40" height="40" style="display: none;"></object>
