--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Show Lots</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link href="https://cdn.datatables.net/v/dt/dt-1.13.7/datatables.min.css" rel="stylesheet">
+    <script src="https://cdn.datatables.net/v/dt/dt-1.13.7/datatables.min.js"></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v3.0.0-beta.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.0.0-beta.1/mapbox-gl.css' rel='stylesheet' />
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
@@ -13,39 +16,74 @@
 <body>
     <div class="centered">
         <div id="mapbox"></div>
-        <div id="dev-info" class="overlay">
-            <div id="zoom_indicator"></div>
-            <!-- <div id="bounds_indicator"></div> -->
-        </div>
-        <div id='info-overlay' class="overlay" style="display: none;">
-            <!-- <div class="select">
-                <div>Map Type</div>
-                <div id="map-type-select">
-                    <input id="light-v11" type="radio" name="map-type-select" value="light" checked="checked">
-                    <label for="light-v11">light</label>
-                    <input id="satellite-streets-v12" type="radio" name="map-type-select" value="satellite">
-                    <label for="satellite-streets-v12">satellite</label>
+
+        <button id="menu-overlay-button" class="btn btn-dark" type="button">
+            <svg aria-hidden="true" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none">
+                <rect width="24" height="1.5" fill=red ry="0.75" x="0" y="6.25" />
+                <rect width="24" height="1.5" fill=red ry="0.75" x="0" y="11.25" />
+                <rect width="24" height="1.5" fill=red ry="0.75" x="0" y="16.25" />
+            </svg>
+        </button>
+
+        <div id="menu-overlay" class="overlay" data-visible="false">
+            <div id="menu">
+
+                <div id="zoom_indicator"></div>
+                <div class="select d-flex flex-row mt-3">
+                    <div>Layer Select</div>
+                    <div id="data-layer-select">
+                        <input id="hlms" type="radio" name="data-select" value="hlms" checked="checked">
+                        <label for="hlms">HLMs</label>
+                        <input id="murbs" type="radio" name="data-select" value="murbs">
+                        <label for="murbs">MURBs</label>
+                    </div>
                 </div>
+                
+                <div class="filter-section-header">
+                    IVP % (Disrepair State)
+                </div>
+                <range-selector 
+                    id="ivp-range-slider"
+                    min-range="{{ ivp_min }}" 
+                    max-range="{{ ivp_max }}" 
+                    slider-color="#6b5b95"
+                    number-of-legend-items-to-show="2"
+                    inputs-for-labels>
+                </range-selector>
+
+
+                <div class="filter-section-header">
+                    Number of Dwellings
+                </div>
+                <range-selector 
+                    id="dwellings-range-slider"
+                    min-range="{{ dwellings_min }}" 
+                    max-range="{{ dwellings_max }}" 
+                    slider-color="#6b5b95"
+                    number-of-legend-items-to-show="2"
+                    inputs-for-labels>
+                </range-selector>
+
+                <button id="filter-submit" class="btn btn-light" type="submit">
+                    Update
+                </button>
             </div>
-            <div class="select">
-                <div>Layer Select</div>
-                <div id="data-layer-select">
-                    <input id="hlms" type="radio" name="data-select" value="hlms" checked="checked">
-                    <label for="hlms">HLMs</label>
-                    <input id="murbs" type="radio" name="data-select" value="murbs">
-                    <label for="murbs">MURBs</label>
-                </div>
-            </div> -->
         </div>
-        <object id="loader" data="{{ url_for('static', filename='svg/loader.svg') }}" type="image/svg+xml" 
-            width="40" height="40" style="display: none;"></object>
+        
+        <div id='info-overlay' class="overlay"></div>
+
         <script src="{{ url_for('static', filename='scripts/map.js') }}"
             data-mapbox-token="{{ mapbox_token }}"
-            data-fetch-lots-url="{{ url_for('lots') }}"
+            data-fetch-lots-url="{{ url_for('get_lots') }}"
             data-fetch-lot-info-url="{{ url_for('lot_info') }}"
-            data-data-folder="{{ url_for('static', filename='data/') }}"></script>
+            data-data-folder="{{ url_for('static', filename='data/') }}"
+            data-ivp-range-min="{{ ivp_min }}"
+            data-ivp-range-max="{{ ivp_max }}"
+            data-dwellings-range-min="{{ dwellings_min }}" 
+            data-dwellings-range-max="{{ dwellings_max }}" 
+        ></script>
         <script src="{{ url_for('static', filename='scripts/utils.js') }}"></script>
-
+        <script type="text/javascript" src="{{ url_for('static', filename='scripts/simpleRange.min.js') }}"></script>
     </div>
   </body>
 </html>
