--- a/templates/unit_info.j2
+++ b/templates/unit_info.j2
@@ -1,105 +1,157 @@
 
 <div id="lot-info">
-    <div id="unit-address">
+    <div id="lot-info-top-row">
         <strong>
-        {{ unit.address }}
+            <div id="unit-address">
+                {{ unit.address }}, 
+                <small>
+                {{unit.muni}}
+                </small>
+            </div>
         </strong>
+        <div id="close-button">
+            <svg width="24px" height="24px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z" fill="##ffffff"/>
+            </svg>
+        </div>
+        <script>
+            document.getElementById('close-button').addEventListener('click', (e) => {
+                document.getElementById('info-overlay').setAttribute('data-visible', false);
+            });
+        </script>
     </div>
-    <div id="unit-id">
-        <small>
-        {{ unit.id }}
-        </small>
+
+    <div>
+        <small>ID {{ unit.id }} </small>
     </div>
     <div>
         {% if unit.num_adr_sup %}
-            <small>
-            (multiple addresses)
-            </small>
+        <small>(multiple addresses)</small>
         {% endif %}
     </div>
 
-    <div id="unit-phys-chars">
-        <div id="unit-phys-chars" class="unit-info-section-header">
-            Physical Characteristics
+    <div id="lot-characteristics" class="info-overlay-section">
+        <div class="unit-info-subsection-header">
+            Lot Info
         </div>
-        <div id="unit-phys-link">{{ unit.phys_link }}</div>
-    
-    </div>
-    <div id="unit-const-yr">
-        {% if unit.const_yr %}
-            Built in {{ unit.const_yr }}
-            {% if unit.const_yr_real == 'E' %}
-                (est.)
-            {% endif %} 
-        {% endif %}</div>
-    <div>Dwellings: {{ unit.num_dwelling }}</div>
-
-    <div>
-    max_floor: {{unit.max_floor}}
-    </div>
-    <div>
-    lot_area: {{unit.lot_area}}
-    </div>
-    <div>
-    lot_lin_dim: {{unit.lot_lin_dim}}
-    </div>
-    <div>
-    floor_area: {{unit.floor_area}}
-    </div>
-    <div>
-    lot_value: {{unit.lot_value}}
-    </div>
-    <div>
-    building_value: {{unit.building_value}}
-    </div>
-    <div>
-    value: {{unit.value}}
-    </div>
-    <div>
-    prev_value: {{unit.prev_value}}
-    </div>
-    <div>
-    owner_date: {{unit.owner_date}}
-    </div>
-    <div>
-    owner_type: {{unit.owner_type}}
-    </div>
-    <div>
-    owner_status: {{unit.owner_status}}
+        <hr style="margin: 0;">
+        <table id="lot-info-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Area</th>
+                    <th>Lin. Dim.</th>
+                    <th>Owner type</th>
+                    <th>Owner status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{unit.lot_number}} </td>
+                    <td>{{unit.lot_area}} m<sup>2</sup></td>
+                    <td>{{unit.lot_lin_dim}} m</td>
+                    <td>{{unit.owner_type}}</td>
+                    <td>{{unit.owner_status}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <script>
+            new DataTable('#lot-info-table', {
+                info: false,
+                ordering: false,
+                paging: false,
+                searching: false
+            });
+        </script>
     </div>
 
-    <div>
-    hlms: 
+    <div id="building-characteristics" class="mt-2">
+        <div id="unit-phys-chars" class="unit-info-subsection-header">
+            Buildings Info
+        </div>
+        <hr style="margin: 0;">
+
+        <table id="lot-building-table">
+            <thead>
+                <tr>
+                    <th>Dwellings</th>
+                    <th>Max floors</th>
+                    <th>Built in</th>
+                    <th>Floor area</th>
+                    <th>Physical Link</th>
+                    <th>Const. type</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{unit.num_dwelling}}</td>
+                    <td>{{unit.max_floor}}</td>
+                    <td>                
+                    {% if unit.const_yr %}
+                    {{ unit.const_yr }}
+                        {% if unit.const_yr_real == 'E' %}
+                            (est.)
+                        {% endif %} 
+                    {% endif %}
+                    </td>
+                    <td>{{unit.floor_area}} m<sup>2</sup></td>
+                    <td>{{unit.phys_link}}</td>
+                    <td>{{unit.const_type}}</td>
+                </tr>
+            </tbody>
+        </table>
+        <script>
+            new DataTable('#lot-building-table', {
+                info: false,
+                ordering: false,
+                paging: false,
+                searching: false
+            });
+        </script>
     </div>
 
-    {% for hlm in unit.hlms %}
-    <div>
-    id: {{ hlm.id }}
-    </div>
-    <div>
-    organism: {{ hlm.organism }}
-    </div>
-    <div>
-    address: {{ hlm.address }}
-    </div>
-    <div>
-    num_dwelling: {{ hlm.num_dwelling }}
-    </div>
-    <div>
-    num_floors: {{ hlm.num_floors }}
-    </div>
-    <div>
-    ivp: {{ hlm.ivp }}
-    </div>
-    <div>
-    disrepair_state: {{ hlm.disrepair_state }}
-    </div>
-    <div>
-    category: {{ hlm.category }}
-    </div>
-    {% endfor %}
+    {% if unit.hlms %}
+    <div id="hlms-block" class="mt-3">
 
-</div>
-<div id="hlm-info">
+        <div class="unit-info-subsection-header">
+            HLMs ({{ unit.hlms|length }}) &dash; {{ unit.hlms[0].organism }}, {{ unit.hlms[0].service_center }}
+        </div>
+        <hr style="margin: 0;">
 
+        <table id="lot-hlms-table">
+            <thead>
+                <tr>
+                    <th>Address</th>
+                    <th>Dwellings</th>
+                    <th>Floors</th>
+                    <th>IVP</th>
+                    <th>Category</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for hlm in unit.hlms %}
+                <tr>
+                    <td>{{hlm.address}}</td>
+                    <td>{{hlm.num_dwelling}}</td>
+                    <td>{{hlm.num_floors}}</td>
+                    <td>
+                    <span class="disrepair-badge disrepair-badge-{{hlm.disrepair_state}}">
+                    {{hlm.ivp}}%
+                    </span>
+                    </td>
+                    <td>{{hlm.category}}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <script>
+            new DataTable('#lot-hlms-table', {
+                info: false,
+                ordering: true,
+                paging: false,
+                searching: false
+            });
+        </script>
+    </div>
+    {% endif %}
 </div>
