--- a/templates/index.html
+++ b/templates/index.html
@@ -29,15 +29,15 @@
             <div id="menu">
 
                 <div id="zoom_indicator"></div>
-                <div class="select d-flex flex-row mt-3">
+                <!-- <div class="select d-flex flex-row mt-3">
                     <div>Layer Select</div>
                     <div id="data-layer-select">
                         <input id="hlms" type="radio" name="data-select" value="hlms" checked="checked">
                         <label for="hlms">HLMs</label>
-                        <!-- <input id="murbs" type="radio" name="data-select" value="murbs">
-                        <label for="murbs">MURBs</label> -->
+                        <input id="murbs" type="radio" name="data-select" value="murbs">
+                        <label for="murbs">MURBs</label>
                     </div>
-                </div>
+                </div> -->
                 
                 <div class="filter-section-header">
                     Disrepair State
