--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HLM Explore</title>
+    <title>HLM Explorer</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.7/datatables.min.css" rel="stylesheet">
@@ -28,8 +28,17 @@
         <div id="menu-overlay" class="overlay" data-visible="false">
             <div id="menu">
 
-                <div class="filter-section-header">
-                    Disrepair State
+                <h2>Filtres</h2>
+
+                <div class="filter-section-header d-flex align-items-center">
+                    Indice d'État 
+                    <a class="btn info-icon pb-2 ps-2" type="button" target="_blank" 
+                        href="http://www.habitation.gouv.qc.ca/fileadmin/internet/documents/partenaires/guides/guide-immeuble-supplement1-section02.pdf#page=14">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-info-circle" viewBox="0 0 16 16">
+                          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                          <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                        </svg>
+                    </a>
                 </div>
 
                 <div class="d-inline-flex gap-2 mb-3">
@@ -43,11 +52,11 @@
                 
                 <div>
                     <div class="filter-section-header">
-                        <label for="cluster-range-slider">Clustering</label>
+                        <label for="cluster-range-slider">Regroupement</label>
                     </div>
 
                     <div class="d-flex mb-2" style="font-size: 18px;">
-                        Cluster
+                        Regrouper les HLMs
                         <div class="form-check form-switch ms-3">
                             <input id="clusterSwitch" class="form-check-input" type="checkbox" role="switch" checked>
                         </div>
@@ -55,7 +64,7 @@
 
                     <div>
                         <div style="font-size: 18px;">
-                            <label for="cluster-range-slider">Clustering Radius</label>
+                            <label for="cluster-range-slider">Rayon de Regroupement</label>
                         </div>
                         <input type="range" class="form-range" id="cluster-range-slider" 
                             min="20" max="80" value="60" step="10">
@@ -67,11 +76,9 @@
 
                 </div>
 
-                
-
 
                 <div class="filter-section-header">
-                    Number of Dwellings
+                    Nombre d'Habitations
                 </div>
                 <range-selector 
                     id="dwellings-range-slider"
