--- a/templates/unit_info.j2
+++ b/templates/unit_info.j2
@@ -22,7 +22,7 @@
     </div>
 
     <div>
-        <small>ID {{ unit.id }} </small>
+        <small>ID {{ unit.id }}</small>
     </div>
     <div>
         {% if unit.num_adr_sup %}
@@ -32,7 +32,7 @@
 
     <div id="lot-characteristics" class="info-overlay-section">
         <div class="unit-info-subsection-header d-flex align-items-center">
-            Caractéristiques du terrain
+            Caractéristiques du Terrain
             <a class="btn info-icon pb-2 ps-2" type="button" target="_blank" 
                 href="https://www.donneesquebec.ca/recherche/dataset/061c8cb7-ca4e-45be-a990-61fce7e7d2dc/resource/6f2599be-e49d-4b9a-8702-b12ad0f56141/download/gui_donneesrolesformatouvert_vf20220627.pdf#page=13">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-info-circle" viewBox="0 0 16 16">
@@ -48,9 +48,9 @@
                 <tr>
                     <th>ID</th>
                     <th>Superficie</th>
-                    <th>Mesure frontale</th>
+                    <th>Mesure Frontale</th>
                     <th>Type Proprio</th>
-                    <th>Status Proprio</th>
+                    <th>Statut Proprio</th>
                 </tr>
             </thead>
             <tbody>
@@ -115,7 +115,7 @@
 
     <div id="building-characteristics" class="mt-2">
         <div id="unit-phys-chars" class="unit-info-subsection-header d-flex align-items-center">
-            Caractéristiques du bâtiment principal
+            Caractéristiques du Bâtiment Principal
             <a class="btn info-icon pb-2 ps-2" type="button" target="_blank" 
                 href="https://www.donneesquebec.ca/recherche/dataset/061c8cb7-ca4e-45be-a990-61fce7e7d2dc/resource/6f2599be-e49d-4b9a-8702-b12ad0f56141/download/gui_donneesrolesformatouvert_vf20220627.pdf#page=16">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-info-circle" viewBox="0 0 16 16">
@@ -132,7 +132,7 @@
                     <th>Habitations</th>
                     <th>Max. Étages</th>
                     <th>Année Constr.</th>
-                    <th>Aire d'étages</th>
+                    <th>Aire d'Étages</th>
                     <th>Lien Physique</th>
                     <th>Type Constr.</th>
                 </tr>
@@ -240,7 +240,7 @@
                             </svg>
                         </a>
                     </th>
-                    <th>Categorie</th>
+                    <th>Catégorie</th>
                 </tr>
             </thead>
             <tbody>
