--- a/static/input.css
+++ b/static/input.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     margin: 0;
     overflow: hidden;
@@ -18,7 +22,8 @@ body {
 }
 
 #loader {
-    width: 20%;
+    height: 100px;
+    width: 100px;
     position: fixed;
     text-align: center;
     padding: 1em;
@@ -47,6 +52,7 @@ Set the color of the loader
     left: 20px; 
     padding: 10px;
 }
+
 
 #info-overlay {
     display: flex;
@@ -99,6 +105,30 @@ Set the color of the loader
 #info-overlay::-webkit-scrollbar-thumb:hover {
     background-color: #6a7173;
 }
+
+
+/* custom scrollbar in the menu overlay */
+#menu-overlay::-webkit-scrollbar {
+    width: 17px;
+}
+  
+#menu-overlay::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+  
+#menu-overlay::-webkit-scrollbar-thumb {
+    background-color: #b5b8b9;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+#menu-overlay::-webkit-scrollbar-thumb:hover {
+    background-color: #6a7173;
+}
+
+
+
 
 .select {
     margin-bottom: 10px;
@@ -208,7 +238,6 @@ table.dataTable>thead {
 }
 
 .filter-section-header {
-    font-size: 18px;
     border-bottom: 1px solid #fff;
     margin-bottom: 10px;
 }
@@ -224,6 +253,10 @@ table.dataTable>thead {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.2s, opacity 0.25s linear;
+    overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+    border-radius: 0px;
 }
 
 #menu-overlay[data-visible=true] {
