--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HLM Explorer</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.7/datatables.min.css" rel="stylesheet">
     <script src="https://cdn.datatables.net/v/dt/dt-1.13.7/datatables.min.js"></script>
@@ -25,45 +25,66 @@
             </svg>
         </button>
 
-        <div id="menu-overlay" class="overlay" data-visible="false">
+        <object id="loader" data="{{ url_for('static', filename='svg/loader.svg') }}" type="image/svg+xml" 
+        width="40" height="40" style="display: none;"></object>
+
+        <div id="menu-overlay" class="overlay" data-visible="true">
             <div id="menu">
-
-                <h2>Filtres</h2>
-
-                <div class="filter-section-header d-flex align-items-center">
-                    Indice d'État 
-                    <a class="btn info-icon pb-2 ps-2" type="button" target="_blank" 
-                        href="http://www.habitation.gouv.qc.ca/fileadmin/internet/documents/partenaires/guides/guide-immeuble-supplement1-section02.pdf#page=14">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-info-circle" viewBox="0 0 16 16">
-                          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                          <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                        </svg>
-                    </a>
-                </div>
-
-                <div class="d-inline-flex gap-2 mb-3">
-                    <button id="button-disrepair-A" data-value="A" type="button" class="btn button-disrepair button-disrepair-A active" data-bs-toggle="button" aria-pressed="true">A</button>
-                    <button id="button-disrepair-B" data-value="B" type="button" class="btn button-disrepair button-disrepair-B active" data-bs-toggle="button" aria-pressed="true">B</button>
-                    <button id="button-disrepair-C" data-value="C" type="button" class="btn button-disrepair button-disrepair-C active" data-bs-toggle="button" aria-pressed="true">C</button>
-                    <button id="button-disrepair-D" data-value="D" type="button" class="btn button-disrepair button-disrepair-D active" data-bs-toggle="button" aria-pressed="true">D</button>
-                    <button id="button-disrepair-E" data-value="E" type="button" class="btn button-disrepair button-disrepair-E active" data-bs-toggle="button" aria-pressed="true">E</button>
-                </div>
-
                 
-                <div>
-                    <div class="filter-section-header">
-                        <label for="cluster-range-slider">Regroupement</label>
+                <div id="menu-clustering" class="text-lg">
+                    <div class="filter-section-header text-2xl">
+                        Regroupement
                     </div>
 
-                    <div class="d-flex mb-2" style="font-size: 18px;">
+                    <div class="flex items-center">
                         Regrouper les HLMs
                         <div class="form-check form-switch ms-3">
-                            <input id="clusterSwitch" class="form-check-input" type="checkbox" role="switch" checked>
+                            <input id="cluster-switch" class="form-check-input" type="checkbox" role="switch" checked>
                         </div>
                     </div>
 
-                    <div>
-                        <div style="font-size: 18px;">
+                    <div class="flex flex-col mt-2">
+                        Regrouper par
+                        <div class="ms-4 mt-1 text-base">
+                            <div class="flex items-center mb-2">
+                                <input id="radio-cluster-by-mrc" type="radio" value="mrc" name="cluster-by" 
+                                    class="w-4 h-4 focus:ring-2" checked>
+                                <label for="radio-cluster-by-mrc" class="ms-2">
+                                    MRC (Municipalité régionale de comté)
+                                </label>
+                            </div>
+                            <div class="flex items-center mb-2">
+                                <input id="radio-cluster-by-sc" type="radio" value="sc" name="cluster-by" 
+                                class="w-4 h-4 focus:ring-2">
+                                <label for="radio-cluster-by-sc" class="ms-2">
+                                    Centre de Service
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col mt-2">
+                        Valeurs
+                        <div class="ms-4 mt-1 text-base">
+                            <div class="flex items-center mb-2">
+                                <input id="cradio-cluster-value-dwellings" type="radio" value="dwellings" name="cluster-value" 
+                                    class="w-4 h-4 focus:ring-2" checked>
+                                <label for="cradio-cluster-value-dwellings" class="ms-2">
+                                    Nombre d'habitations
+                                </label>
+                            </div>
+                            <div class="flex items-center mb-2">
+                                <input id="cradio-cluster-value-hlms" type="radio" value="hlms" name="cluster-value" 
+                                class="w-4 h-4 focus:ring-2">
+                                <label for="cradio-cluster-value-hlms" class="ms-2">
+                                    Nombre de HLMs
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- <div class="mt-2">
+                        <div>
                             <label for="cluster-range-slider">Rayon de Regroupement</label>
                         </div>
                         <input type="range" class="form-range" id="cluster-range-slider" 
@@ -72,31 +93,91 @@
                             <p>20</p>
                             <p>80</p>
                         </div>
+                    </div> -->
+                </div>
+
+                <div id="menu-filters">
+
+                    <h2>Filtres</h2>
+
+                    <div>
+                        <div id="mrc-filter" class="filter-section-header flex items-center justify-between w-full">
+                            <div class="flex items-center">
+                                MRC
+                                <svg id="mrc-filter-icon-up" class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+                                </svg>
+                                <svg id="mrc-filter-icon-down" class="ms-2 hidden" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <div id="mrc-filter-buttons" class="flex flex-wrap hidden gap-1">
+                            <div class="w-full">
+                                <div id="mrc-filter-select-all" data-target-id="mrc-filter-buttons" class="w-fit cursor-pointer text-sm text-blue-200 hover:text-blue-400 pt-1 pb-2 px-1 pe-3 hover:border-blue-200"> 
+                                Select all
+                                </div>
+                            </div>
+                            <!-- Place holder for all the MRC filter buttons, created in map.js -->
+                        </div>
+                    </div>
+                    <div>
+                        <div id="sc-filter" class="filter-section-header flex items-center">
+                            Service Center
+                            <svg id="sc-filter-icon-up" class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+                            </svg>
+                            <svg id="sc-filter-icon-down" class="ms-2 hidden" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
+                            </svg>
+                        </div>
+                        <div id="sc-filter-buttons" class="flex flex-wrap hidden gap-1">
+                            <div class="w-full">
+                                <div id="sc-filter-select-all" data-target-id="sc-filter-buttons" class="w-fit cursor-pointer text-sm text-blue-200 hover:text-blue-400 pt-1 pb-2 px-1 pe-3 hover:border-blue-200"> 
+                                Select all
+                                </div>
+                            </div>
+                            <!-- Place holder for all the Serice Center filter buttons, created in map.js -->
+                        </div>
                     </div>
 
+                    <div class="filter-section-header d-flex align-items-center">
+                        Indice d'État 
+                        <a class="btn info-icon pb-2 ps-2" type="button" target="_blank" 
+                            href="http://www.habitation.gouv.qc.ca/fileadmin/internet/documents/partenaires/guides/guide-immeuble-supplement1-section02.pdf#page=14">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-info-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                            <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                            </svg>
+                        </a>
+                    </div>
+
+                    <div class="d-inline-flex gap-2 mb-3">
+                        <button id="button-disrepair-A" data-value="A" type="button" class="btn button-disrepair button-disrepair-A active" data-bs-toggle="button" aria-pressed="true">A</button>
+                        <button id="button-disrepair-B" data-value="B" type="button" class="btn button-disrepair button-disrepair-B active" data-bs-toggle="button" aria-pressed="true">B</button>
+                        <button id="button-disrepair-C" data-value="C" type="button" class="btn button-disrepair button-disrepair-C active" data-bs-toggle="button" aria-pressed="true">C</button>
+                        <button id="button-disrepair-D" data-value="D" type="button" class="btn button-disrepair button-disrepair-D active" data-bs-toggle="button" aria-pressed="true">D</button>
+                        <button id="button-disrepair-E" data-value="E" type="button" class="btn button-disrepair button-disrepair-E active" data-bs-toggle="button" aria-pressed="true">E</button>
+                    </div>
+
+                    <div class="filter-section-header">
+                        Nombre d'Habitations
+                    </div>
+                    <range-selector 
+                        id="dwellings-range-slider"
+                        min-range="{{ dwellings_min }}" 
+                        max-range="{{ dwellings_max }}" 
+                        slider-color="#6b5b95"
+                        number-of-legend-items-to-show="2"
+                        inputs-for-labels>
+                    </range-selector>
                 </div>
-
-
-                <div class="filter-section-header">
-                    Nombre d'Habitations
-                </div>
-                <range-selector 
-                    id="dwellings-range-slider"
-                    min-range="{{ dwellings_min }}" 
-                    max-range="{{ dwellings_max }}" 
-                    slider-color="#6b5b95"
-                    number-of-legend-items-to-show="2"
-                    inputs-for-labels>
-                </range-selector>
-
-                <!-- <button id="filter-submit" class="btn btn-light" type="submit">
-                    Update
-                </button> -->
             </div>
         </div>
         
         <div id='info-overlay' class="overlay"></div>
 
+        <script src="{{ url_for('static', filename='scripts/constants.js') }}"></script>
         <script src="{{ url_for('static', filename='scripts/map.js') }}"
             data-mapbox-token="{{ mapbox_token }}"
             data-fetch-lots-url="{{ url_for('get_lots') }}"
