working clustering by MRC and SC and switching

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <div id="mrc-filter-buttons" class="flex flex-wrap hidden gap-1">
+                        <div id="mrc-filter-buttons" class="flex flex-wrap hidden gap-1 mb-2">
                             <div class="w-full">
                                 <div id="mrc-filter-select-all" data-target-id="mrc-filter-buttons" class="w-fit cursor-pointer text-sm text-blue-200 hover:text-blue-400 pt-1 pb-2 px-1 pe-3 hover:border-blue-200"> 
                                 Select all
@@ -131,7 +131,7 @@
                                 <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
                             </svg>
                         </div>
-                        <div id="sc-filter-buttons" class="flex flex-wrap hidden gap-1">
+                        <div id="sc-filter-buttons" class="flex flex-wrap hidden gap-1 mb-2">
                             <div class="w-full">
                                 <div id="sc-filter-select-all" data-target-id="sc-filter-buttons" class="w-fit cursor-pointer text-sm text-blue-200 hover:text-blue-400 pt-1 pb-2 px-1 pe-3 hover:border-blue-200"> 
                                 Select all
